fix text alignment and spacing

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Roboto, Helvetica, sans-serif;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .hero {
@@ -106,16 +107,27 @@ button {
     justify-content: center;
     flex-grow: 1;
     margin-bottom: 100px;
+    gap: 40px;
 }
 
 .box-container {
-    max-width: 180px;
+    max-width: 140px;
 }
 
 .box {
     height: 120px;
-    width: 120px;
+    width: 140px;
     border: 3px solid #3882F6;
-    border-radius: 8px;
+    border-radius: 10px;
     display: flex;
+    margin-bottom: 10px;
+}
+
+.box-text {
+    width: 150px;
+}
+
+.br {
+    text-align: center;
+    padding-right: 5px;
 }
